<resources>
    <string name="app_name">Login Application</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_login_in">Login</string>
    <string name="welcome">Welcome to Home</string>
    <string name="view">CS490 Mobile Programming</string>

    <!-- Strings related to logout -->
    <string name="logout">Logout</string>
    <string name="none">none</string>
</resources>